<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">


    <com.norrpark.user.norrpark.customViews.GlideImageView
        android:layout_width="@dimen/icon_width"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/logo"
        app:viewAspectRatio="1.3" />

    <com.norrpark.user.norrpark.customViews.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/title_icon"
        android:textAllCaps="true"
        android:textSize="@dimen/text_below_logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp">

        <com.norrpark.user.norrpark.customViews.FontEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.norrpark.user.norrpark.customViews.FontEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <!-- Signup Button -->
    <com.norrpark.user.norrpark.customViews.FontTextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/button_color"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="10dp"/>

</LinearLayout>